--- a/public/views/categoria.html
+++ b/public/views/categoria.html
@@ -8,10 +8,10 @@
         }"></i></a>
         {{category.name}}
 
-        <a class="pull-right btn btn-danger btn-xs" data-nodrag="" ng-click="removeCategory(this)">
+        <a class="pull-right btn btn-danger btn-xs" data-nodrag="" ng-click="removeCategory(this)" data-toggle="tooltip" title="Remover Categoria">
             <i class="glyphicon glyphicon-remove" />
         </a>
-        <a class="pull-right btn btn-primary btn-xs" data-nodrag="" ng-click="newSubItem(this)">
+        <a class="pull-right btn btn-primary btn-xs" data-nodrag="" ng-click="newSubItem(this)" data-toggle="tooltip" title="Nova Categoria">
             <i class="glyphicon glyphicon-plus" />
         </a>
     </div>
