--- a/public/views/category.html
+++ b/public/views/category.html
@@ -1,18 +1,27 @@
 <!-- Category templates -->
 <script type="text/ng-template" id="categoriasRepeat.html">
     <div ui-tree-handle>
-        <a class="btn btn-success btn-xs" ng-if="category.category && category.category.length > 0" data-nodrag="" ng-click="toggleCategory(this)">
-            <i class="glyphicon glyphicon-chevron-down" ng-class="{
-            'glyphicon-chevron-right': collapsed,
-            'glyphicon-chevron-down': !collapsed
+        <a class="btn btn-info btn-xs" ng-if="category.category && category.category.length > 0"
+           data-nodrag="" ng-click="toggleCategory(this)">
+            <i class="fa" ng-class="{
+            'fa-chevron-right': !collapsed,
+            'fa-chevron-down': collapsed
         }"></i></a>
         {{category.name}}
 
-        <a class="pull-right btn btn-danger btn-xs" data-nodrag="" ng-click="removeCategory(this)" data-toggle="tooltip" title="Remover Categoria">
-            <i class="glyphicon glyphicon-remove" />
+        <a class="pull-right btn btn-default btn-xs" data-nodrag="" ng-click="removeCategory(this)"
+           data-toggle="tooltip" title="Remover">
+            <i class="fa fa-minus" />
         </a>
-        <a class="pull-right btn btn-primary btn-xs" data-nodrag="" ng-click="newSubItem(this)" data-toggle="tooltip" title="Nova Categoria">
-            <i class="glyphicon glyphicon-plus" />
+
+        <a class="pull-right btn btn-default btn-xs" data-nodrag="" ng-click="editCategory(this)"
+           data-toggle="tooltip" title="Editar">
+            <i class="fa fa-pencil" />
+        </a>
+
+        <a class="pull-right btn btn-default btn-xs" data-nodrag="" ng-click="addSubCategory(this)"
+           data-toggle="tooltip" title="Adicionar">
+            <i class="fa fa-plus" />
         </a>
     </div>
     <ol ui-tree-nodes="" ng-model="category.category" ng-class="{hidden: collapsed}">
@@ -38,22 +47,19 @@
 </script>
 
 <div ng-controller="CategoriaCtrl">
+    <h2>Categorias</h2>
     <div class="col-md-6">
         <div class="row">
+            <div class="angular-ui-tree-handle" style="background-color: white; border: 0px">
+                <button class="btn btn-primary btn-sm" type="button" ng-click="addCategory(categories)">
+                    <i class="glyphicon glyphicon-plus" /> Nova Categoria
+                </button>
+            </div>
             <div ui-tree ng-if="categories.length > 0">
                 <ol ui-tree-nodes="" ng-model="categories" id="tree-root">
                     <li ng-repeat="category in categories" ui-tree-node ng-include="'categoriasRepeat.html'"></li>
                 </ol>
             </div>
-
-            <div ng-if="categories.length === 0">
-                <div class="angular-ui-tree-handle">
-                    <button class="btn btn-primary btn-xs" type="button">
-                        <i class="glyphicon glyphicon-plus" /> Nova Categoria
-                    </button>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
