--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <h2 class="text-center">Contente</h2>
+        <h1 class="text-center"><strong>Contente</strong></h1>
         <h5 class="text-center">Bem vindo!</h5>
     </div>
     <div class="col-md-4"></div>
