--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,14 +1,13 @@
-<div style="padding-top: 165px">
+<div ng-controller="LoginCtrl">
 
-</div>
-
+<div style="padding-top: 165px"></div>
 
 <!--Title -->
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <h1 class="text-center"><strong>Contente</strong></h1>
-        <h5 class="text-center">Bem vindo!</h5>
+        <h1 class="text-center no-margin-bottom"><strong>Contente :-)</strong></h1>
+        <h5 class="text-center no-margin-top">Bem vindo!</h5>
     </div>
     <div class="col-md-4"></div>
 </div>
@@ -33,3 +32,4 @@
     <div class="col-md-5"></div>
 </div>
 
+</div>
