--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -1,4 +1,3 @@
-
 .btn {
     margin-right: 8px;
 }
@@ -52,13 +51,15 @@
     margin-right: 10px;
 }
 
-.angular-ui-tree-handle:hover {
-}
-
 .angular-ui-tree-placeholder {
     background: #f0f9ff;
     border: 2px dashed #bed2db;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.contas-ui-tree-head {
+    background: none !important;
+    border: 0px;
 }
