--- a/public/views/login.html
+++ b/public/views/login.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <h1 class="text-center no-margin-bottom"><strong>Contente :-)</strong></h1>
+        <h1 class="text-center"><strong>Contente :-)</strong></h1>
         <h5 class="text-center no-margin-top">Bem vindo!</h5>
     </div>
     <div class="col-md-4"></div>
@@ -24,7 +24,7 @@
                 <input type="password" class="form-control"  placeholder="Digite sua senha">
             </div>
             <div class="text-center">
-                <button type="button" class="btn btn-success">Enviar</button>
+                <button type="submit" class="btn btn-success">Enviar</button>
             </div>
 
         </form>
